Fix descriptions overflowing

--- a/public/css/user_card_sets.css
+++ b/public/css/user_card_sets.css
@@ -94,6 +94,15 @@ a{text-decoration: none;}
 
     font-family: 'Roboto', sans-serif;
 
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    -ms-word-break: break-word;
+    word-break: break-word;
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto;
+
     padding:1em;
     margin: 0;
 
